<resources>
    <string name="app_name">ExamenKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="les_meves_tasques">Les meves tasques</string>
    <string name="les_moves_tasques">Les moves tasques</string>
    <string name="personal">Personal</string>
    <string name="fam_lia">Família</string>
    <string name="feina">Feina</string>
    <string name="totes">Totes</string>
    <string name="title_activity_bottom_navegation">BottomNavegation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wifi">WIFI</string>
    <string name="send">Send</string>
</resources>