<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:title="@string/les_meves_tasques"
         android:titleTextColor="@android:color/white"
         app:titleTextColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        >
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chipTotes"
        app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipTotes"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totes" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipFeina"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feina" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipFamilia"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fam_lia" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipPersonal"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal" />

    </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>

</FrameLayout>